2005-06-17  Jan Beulich  <jbeulich@novell.com>

	* bfd-in2.h (elf_x86_64_reloc_type): Add BFD_RELOC_X86_64_GOTOFF64
	and BFD_RELOC_X86_64_GOTPC32.
	* libbfd.h (bfd_reloc_code_real_names): Likewise.
	* elf64-x86-64.c (x86_64_elf_howto_table): Add entries for
	R_X86_64_PC64, R_X86_64_GOTOFF64, and R_X86_64_GOTPC32.
	(x86_64_reloc_map): Add entries for R_X86_64_PC64, R_X86_64_GOTOFF64,
	and R_X86_64_GOTPC32.
	(elf64_x86_64_info_to_howto): Adjust bounding relocation type.
	(elf64_x86_64_check_relocs): Also handle R_X86_64_PC64,
	R_X86_64_GOTOFF64, and R_X86_64_GOTPC32.
	(elf64_x86_64_relocate_section): Likewise.
	(elf64_x86_64_gc_sweep_hook): Also handle R_X86_64_PC64.

2005-06-15  Mark Kettenis  <kettenis@gnu.org>

	* archive.c: Include "libiberty.h".

2005-06-15  Nick Clifton  <nickc@redhat.com>

	* elf32-v850.c (ELF_MACHINE_ALT2): Define so that binaries
	produced by the GreenHills toolchain can be assimilated.

2005-06-14  Steve Ellcey  <sje@cup.hp.com>

	* som.c (som_find_inliner_info): New.

2005-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	* elflink.c (_bfd_elf_merge_symbol): Fix a typo in comment.

2005-06-14  Jakub Jelinek  <jakub@redhat.com>

	* elf.c (bfd_section_from_shdr): Fail if name is NULL.
	Prevent endless recursion on broken objects.

	* archive.c (do_slurp_coff_armap): Check for overflows.

2005-06-10  Daniel Jacobowitz  <dan@codesourcery.com>

	* elfcode.h (elf_write_relocs): Do nothing if there are no
	relocations.

2005-06-10  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2.c (decode_line_info): Revert last change.  Instead set
	initial low_pc to -1 to avoid need to test whether loc_pc has
	been set.

2005-06-09  Christopher Faylor  <cgf@timesys.com>

	* coffcode.h (sec_to_styp_flags): Set appropriate section flags when
	either SEC_ALLOC OR SEC_LOAD.

2005-06-09  Christopher Faylor  <cgf@timesys.com>

	* coffcode.h (sec_to_styp_flags): Remove read/write flags from noload
	section header.  Do not add STYP_NOLOAD since it does not appear to be